--- a/project/chiron/index.html
+++ b/project/chiron/index.html
@@ -21,9 +21,9 @@
 				<div class="w3-bar-item w3-hide-small w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i></div>
 				<div class="w3-bar-item w3-hide-small w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i></div>
 			</div>
-			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
-			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">HOME</a>
-			<a href="../contacts/index.html" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
+			<a href="../" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
+			<a href="../" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">HOME</a>
+			<a href="../contacts/" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
 		</div>
 	</div>
 
@@ -31,14 +31,14 @@
 	<div class="w3-top w3-hide-large">
 		<div class="w3-bar w3-top w3-xlarge" style="font-family: 'Titillium Web', sans-serif; padding-top: 2px; background-color: rgba(255,255,255,0.1);">
 			<a class="w3-bar-item w3-btn w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-			<a href="../index.html" class="w3-bar-item w3-padding-large">AUTO.HU</a>
+			<a href="../" class="w3-bar-item w3-padding-large">AUTO.HU</a>
 		</div>
 	</div>
 
 	<!-- Navbar on small screens -->
 	<div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-top" style="margin-top:50px; font-family: 'Titillium Web', sans-serif; background-color: rgba(255,255,255,0.1);">
-		<a href="#band" class="w3-bar-item w3-btn w3-padding-large">BAND</a>
-		<a href="#tour" class="w3-bar-item w3-btn w3-padding-large">TOUR</a>
+		<a href="#band" class="w3-bar-item w3-btn w3-padding-large">CONTACTS</a>
+		<div id="social" onclick="myFunction()" class="w3-bar-item w3-btn w3-padding-large">SOCIAL</div>
 	</div>
 
 	<div id="top" class="w3-image w3-center">
@@ -99,12 +99,41 @@
 				In case you were curious, the Chiron will do zero to 186mph in 13.6 seconds – more than half a second faster than it takes a base model Seat Ibiza to do 0-62.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan-rogue/nissan_rogue_trail_warrior_project_21.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/chiron/07_bugatti_chiron_the_quail_web.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>Can I buy one?</b>
-				<br/>				
-				Nissan says the RTWP is a one-off (don’t expect to see tracks on the options list anytime soon), and one of “several unique takes” on the crossover it’ll be displaying at the NY show. It also says “If you want to stand out from the crowd during a day on the slopes or the beach, this is the vehicle to take.”  Indeed.
+				<b>Price: €2.4m (before tax)</b>
+				<br/>
+				Now, that works out to around the £2m mark, before tax. And that is not the sort of money the average person just wakes up to find in their account. It’s more than a Koenigsegg Regera, which could very well be every bit as brisk as a Chiron.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/chiron/01_chiron_auslieferungsstart_web.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>Rarity: 500</b>
+				<br/>
+				Yup, just 500 Chirons will be built. For reference, there are fewer than 2,500 Bengal tigers left in the wild.
+				And remember the endless specials and ‘one-offs’ that the Veyron had? The Chiron will likely get its own, but half of the 500 that Bugatti will ever make have already been sold. That’s a sale rate that the Veyron could only look at with envy.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/chiron/03_molsheim_bugatti_atelier_0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>Engine: 8.0-litre W16</b>
+				<br/>
+				Four turbochargers. Eight litres. Sixteen cylinders. And 25 per cent more power than the Veyron. This you know. 
+				What you may not know is that the Chiron has six catalytic converters, with a combined active area of more than 30 football pitches. 
+				Or, how about the 32 fuel injectors – two per cylinder – that combine fuel with 60,000 litres of air a minute, emptying the 100-litre tank in six minutes and 49 seconds at wide-open throttle.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/chiron/15_bugatti_chiron_the_quail_web.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>Body: wide</b>
+				<br/>
+				The Chiron’s drag coefficient changes according to which drive mode it’s in. Tool around in auto and it’s 0.38, which raises to 0.40 in handling mode and drops to 0.35 in top speed mode. When the airbrake deploys, the drag coefficient jumps to 0.59 – or about as bad as a 1998 Jeep Wrangler. That’s probably the only time you’ll see the two compared. 
+				A drag coefficient of 0.35 doesn’t seem all that impressive by itself, but when you consider that the Chiron has a massive horseshoe grille, is more than two metres wide and 1.2 metres high, it starts to make more sense. 
+				Something that grabs your eye immediately is the comparative stubbiness of the Chiron – at just 4.5 metres in length, it’s no longer than a Porsche 911.
 			</div>
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
@@ -136,7 +165,7 @@
 		</div>
 	</div>
 	<!-- Social Modal --> 
-	<div id="social" class="w3-modal">
+	<div id="socials" class="w3-modal">
   		<div class="w3-modal-content w3-animate-opacity">
     		<div class="w3-container">
       			<p class="w3-xxxlarge w3-center" style="font-family: 'Titillium Web', sans-serif; padding-top: 35%">Thanks for helping us!</div>
@@ -171,6 +200,11 @@
 	$("#up").click(function() {
     		$('html, body').animate({
        			 scrollTop: $("#top").offset().top
+    		}, 3000);
+	});
+	$("#social").click(function() {
+    		$('html, body').animate({
+       			 scrollTop: $("#socials").offset().top
     		}, 3000);
 	});
 </script>
