--- a/project/alfar/index.html
+++ b/project/alfar/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#000000">
-	<title>auto.hu</title>
+	<title>This mad Alfa Romeo concept is the supercar we need right now - auto.hu</title>
 	<link rel="icon" href="../favicon.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
@@ -134,7 +134,7 @@
 	}
 
 	// When the user clicks anywhere outside of the modal, close it
-	var modal = document.getElementById('social');
+	var modal = document.getElementById('social2');
 	window.onclick = function(event) {
 	  if (event.target == modal) {
 	    modal.style.display = "none";
