--- a/project/chiron/index.html
+++ b/project/chiron/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#000000">
-	<title>auto.hu</title>
+	<title>The Bugatti Chiron in numbers - auto.hu</title>
 	<link rel="icon" href="../favicon.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
@@ -38,7 +38,7 @@
 	<!-- Navbar on small screens -->
 	<div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-top" style="margin-top:50px; font-family: 'Titillium Web', sans-serif; background-color: rgba(255,255,255,0.1);">
 		<a href="#band" class="w3-bar-item w3-btn w3-padding-large">CONTACTS</a>
-		<div id="social1" onclick="myFunction()" class="w3-bar-item w3-btn w3-padding-large">SOCIAL</div>
+		<div id="social" onclick="myFunction()" class="w3-bar-item w3-btn w3-padding-large">SOCIAL</div>
 	</div>
 
 	<div id="top" class="w3-image w3-center">
@@ -202,7 +202,7 @@
        			 scrollTop: $("#top").offset().top
     		}, 3000);
 	});
-	$("#social1").click(function() {
+	$("#social").click(function() {
     		$('html, body').animate({
        			 scrollTop: $("#socials").offset().top
     		}, 3000);
