--- a/project/corvette-history/index.html
+++ b/project/corvette-history/index.html
@@ -37,8 +37,8 @@
 
 	<!-- Navbar on small screens -->
 	<div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-top" style="margin-top:50px; font-family: 'Titillium Web', sans-serif; background-color: rgba(255,255,255,0.1);">
-		<a href="#band" class="w3-bar-item w3-btn w3-padding-large">BAND</a>
-		<a href="#tour" class="w3-bar-item w3-btn w3-padding-large">TOUR</a>
+		<a href="../contacts/" class="w3-bar-item w3-btn w3-padding-large">CONTACTS</a>
+		<div id="social" onclick="myFunction()" class="w3-bar-item w3-btn w3-padding-large">SOCIAL</div>
 	</div>
 
 	<div id="top" class="w3-image w3-center">
@@ -118,9 +118,16 @@
 				<br/>
 				The first Corvette without concealed headlights since 1962 was effectively a refined C5. It was shorter but had a longer wheelbase, more powerful, more efficient engines and a nicer interior. Its modifications too extensive to list, the Z06 could hit 60mph in less than four seconds, and top 200mph.			
 				</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">	
+			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%; width: 40%">
+				<div class="items__">
+					<button onclick="document.getElementById('social2').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
+					<button onclick="document.getElementById('social2').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
+					<button onclick="document.getElementById('social2').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
+				</div>
+			</div>	
 			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif; width: 40%">
 				<div class="w3-bar-item"><i class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
 				<div class="w3-bar-item"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
@@ -128,7 +135,7 @@
 		</div>
 	</div>	
 	<!-- Row end --> 
-	<div class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
+	<div id="socials" class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-center">
 		<div class="content">
 			Powered by w3.css
@@ -141,7 +148,7 @@
 		</div>
 	</div>
 	<!-- Social Modal --> 
-	<div id="social" class="w3-modal">
+	<div id="social2" class="w3-modal">
   		<div class="w3-modal-content w3-animate-opacity">
     		<div class="w3-container">
       			<p class="w3-xxxlarge w3-center" style="font-family: 'Titillium Web', sans-serif; padding-top: 35%">Thanks for helping us!</div>
@@ -159,6 +166,13 @@
 	        x.className = x.className.replace(" w3-show", "");
 	    }
 	}
+	// When the user clicks anywhere outside of the modal, close it
+	var modal = document.getElementById('social2');
+	window.onclick = function(event) {
+	  if (event.target == modal) {
+	    modal.style.display = "none";
+	  }
+	}
 	$("#mover").click(function() {
     		$('html, body').animate({
         			scrollTop: $("#main").offset().top
@@ -167,6 +181,11 @@
 	$("#up").click(function() {
     		$('html, body').animate({
        			 scrollTop: $("#top").offset().top
+    		}, 3000);
+	});
+	$("#social").click(function() {
+			$('html, body').animate({
+       			 scrollTop: $("#socials").offset().top
     		}, 3000);
 	});
 	</script>
