--- a/project/index.html
+++ b/project/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<a href="../" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
 			<a href="../" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">HOME</a>
-			<a href="../contacts/" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
+			<a href="contacts/" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
 		</div>
 	</div>
 
