--- a/project/contacts/index.html
+++ b/project/contacts/index.html
@@ -60,10 +60,34 @@
 				Contact us
 			</div>
 			<hr/>
-			<div class="w3-large w3-center" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+			<div class="w3-image w3-center">
+				<img src="../img/Build-A-Team-4.4.2.0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-xxlarge w3-center" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'Titillium Web', sans-serif;">
+				A TEAM OF EXPERTS WITH A VISION
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				Better together, that is the motto of our perfectly rehearsed unit. Whenever we design, plan and make family homes a high quality reality for you, every member of our team is involved with heart and mind to bring about your new home. Well-defined, crystal clear procedures, specialized knowledge, many years of experience and visionary ideas – we can guarantee all this as well as our fixed price. You will be well looked after from our first conversation right up to the handing over of your Designhaus, not only in terms of technical knowledge but also person to person. You can rely wholeheartedly on our top team.
+			</div>
+			<div class="w3-xxlarge w3-center" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'Titillium Web', sans-serif;">
+				QUALITY, GUARANTEED
+			</div>
+			<div class="w3-large w3-right" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				We will work with our experienced family home professionals to implement absolutely everything that we plan and decide with you. More than 40 qualified and dedicated Designhaus specialists guarantee flawless competence in their field, as well as first-class service. Throughout the entire building process of your MartyDesignHaus with fixed price guarantee, our in-house site managers will personally accompany and assess every phase of construction. They are responsible for making sure that all the specifications for your MartyDesignHaus are tightly observed.
+			</div>
+			<div class="w3-xxlarge w3-center" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'Titillium Web', sans-serif;">
+				SECURE JOBS
+			</div>
+			<div class="w3-large w3-right" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				Our strategy is clearly focused on the creation, planning and construction of top-quality family homes. Every week, we start building a new home somewhere in Switzerland. The good reputation of Marty Häuser AG and our excellent credit rating are the result of our precisely structured procedures, which have been tested and honed for many years. These pave the way for your planning application and can ease your mind in response to questions and clarifications of the financing. For our team, they are also an important guarantee of job security, as it is thanks to our thoroughly clear strategy that we have been successful for more than 80 years.
+			</div>
+			<div class="w3-large w3-center" style="margin-left: 5%; margin-right: 5%; margin-bottom: 2%; font-family: 'PT Sans', sans-serif;">
 				<span><i class="fa fa-map-marker" aria-hidden="true"></i>UK, Kolotushkina str. 8 </span>
 				<br/>
 				<span><i class="fa fa-phone" aria-hidden="true"></i> +2445645642356 </span>
+			</div>
+			<div class="w3-large w3-center" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<button class="w3-btn" onclick="document.getElementById('social2').style.display='block'"><i class="fa fa-handshake-o" aria-hidden="true"></i>Contact us</button>
 			</div>
 <!--
 			<div class="auto w3-image w3-center">
@@ -136,6 +160,17 @@
 				<a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i>	
 			</div>
 		</div>
+	</div>
+	<!-- Social Modal --> 
+	<div id="social2" class="w3-modal">
+  		<div class="w3-modal-content w3-animate-opacity">
+    		<div class="w3-container">
+    			<div class="w3-center">
+    				<span class="w3-jumbo" style="margin-bottom: 3%; font-family: 'Titillium Web', sans-serif;">Surprise!</span>
+    				<div class="w3-image"><img src="../img/kopaszbela.jpg" alt="beci"></div>
+    			</div>
+    		</div>
+  		</div>
 	</div>
 	<script>
 	function myFunction() {
