--- a/project/chiron/index.html
+++ b/project/chiron/index.html
@@ -37,7 +37,7 @@
 
 	<!-- Navbar on small screens -->
 	<div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-top" style="margin-top:50px; font-family: 'Titillium Web', sans-serif; background-color: rgba(255,255,255,0.1);">
-		<a href="#band" class="w3-bar-item w3-btn w3-padding-large">CONTACTS</a>
+		<a href="../contacts/" class="w3-bar-item w3-btn w3-padding-large">CONTACTS</a>
 		<div id="social" onclick="myFunction()" class="w3-bar-item w3-btn w3-padding-large">SOCIAL</div>
 	</div>
 
