--- a/project/index.html
+++ b/project/index.html
@@ -184,7 +184,7 @@
 				And if you thought ‘Range Rover Velar’ was a minor mouthful, then prepare yourself for the Lumma CLR GT Limited Edition. The body kit is best described as ‘strong’, with wildly swelled wheel arches, side sills you can almost step on and an actual carbon rear spoiler. Oh, and a rear diffuser that looks like a grumpy mouth.
 				<a href="https://www.topgear.com/car-news/modified/yikes-someones-tuned-range-rover-velar-already" style="color: white">_</a>
 				<br/>
-				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="randr/"></a>Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
+				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="randr/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 			</div>
 		</div>
 	</div>
