--- a/SWIEZERYBY/index.html
+++ b/SWIEZERYBY/index.html
@@ -5,8 +5,8 @@
 	<title>SWIEZERYBY.COM</title>
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="OwlCarousel2/assets/owl.carousel.min.css">
-	<!-- <link rel="stylesheet" href="OwlCarousel2/assets/owl.theme.default.min.css"> -->
+	<link rel="stylesheet" href="slick/slick.css">
+	<link rel="stylesheet" href="slick/slick-theme.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -59,7 +59,7 @@
 		</p>
 		<!-- Slider -->
 		<div class="slider">
-			<div class="owl-carousel owl-theme">
+			<div class="slick">
 				<div class="carousel-item">
 					<div class="carousel-img">
 						<img src="img/slider/1.jpg" alt="1">
@@ -94,14 +94,49 @@
 					<div class="carousel-text">
 						<h1 class="bold">MAKRELA WĘDZONA</h1>
 						<p class="regular">5,99ZŁ/SZT</p>
+					</div>	
+				</div>
+				<div class="carousel-item">
+					<div class="carousel-img">
+						<img src="img/slider/1.jpg" alt="1">
+					</div>
+					<div class="carousel-text">
+						<h1 class="bold">DORADA ŚWIEŻA</h1>
+						<p class="regular">14,99 ZŁ/KG</p>
 					</div>
 				</div>
-				
+				<div class="carousel-item">
+					<div class="carousel-img">
+						<img src="img/slider/2.jpg" alt="2">
+					</div>
+					<div class="carousel-text">
+						<h1 class="bold">PSTRĄG PATROSZONY</h1>
+						<p class="regular">20,99 ZŁ/KG</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="carousel-img">
+						<img src="img/slider/3.jpg" alt="3">
+					</div>
+					<div class="carousel-text">
+						<h1 class="bold">KREWETKI TYGRYSIE</h1>
+						<p class="regular">39,99 ZŁ/KG</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="carousel-img">
+						<img src="img/slider/4.jpg" alt="4">
+					</div>
+					<div class="carousel-text">
+						<h1 class="bold">MAKRELA WĘDZONA</h1>
+						<p class="regular">5,99ZŁ/SZT</p>
+					</div>	
+				</div>				
 			</div>
 		</div>
 		<!-- Slider END -->
 		<div class="container">
-			<button class="asortyment-btn bold">ZOBACZ CAŁY <span class="blocked">ASORTYMENT</span></button>
+			<a class="asortyment-btn w3-center bold">ZOBACZ CAŁY <span class="blocked">ASORTYMENT</span></a>
 		</div>	
 	</section>
 	<section id="whywe">
@@ -184,7 +219,7 @@
 		<p class="footer-up w3-right regular">W GÓRĘ</p>
 	</footer>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
-	<script type="text/javascript" src="OwlCarousel2/owl.carousel.min.js" defer></script>
+	<script type="text/javascript" src="slick/slick.min.js" defer></script>
 	<script type="text/javascript" src="js/index.js" defer></script>
 </body>
 </html>
