--- a/SWIEZERYBY/index.html
+++ b/SWIEZERYBY/index.html
@@ -57,7 +57,7 @@
 		<p class="asortyment-text hind-regular blocked">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie egestas massa, et sollicitudin urna mattis faucibus. Praesent sagittis laoreet est, et efficitur enim lacinia id. Aenean imperdiet diam nec efficitur commodo. Morbi at purus tempus tellus tempus placerat. Sed faucibus sed elit at lacinia.
 		</p>
-		<!-- Slider -->
+		<!-- Slider
 		<div class="slider">
 			<div class="slick">
 				<div class="carousel-item">
@@ -134,7 +134,7 @@
 				</div>				
 			</div>
 		</div>
-		<!-- Slider END -->
+		 Slider END -->
 		<div class="container">
 			<a class="asortyment-btn w3-center bold">ZOBACZ CAŁY <span class="blocked">ASORTYMENT</span></a>
 		</div>	
