--- a/SWIEZERYBY/index.html
+++ b/SWIEZERYBY/index.html
@@ -5,6 +5,7 @@
 	<title>SWIEZERYBY.COM</title>
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="slick/slick.css">
 	<link rel="stylesheet" href="slick/slick-theme.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -57,14 +58,14 @@
 		<p class="asortyment-text hind-regular blocked">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie egestas massa, et sollicitudin urna mattis faucibus. Praesent sagittis laoreet est, et efficitur enim lacinia id. Aenean imperdiet diam nec efficitur commodo. Morbi at purus tempus tellus tempus placerat. Sed faucibus sed elit at lacinia.
 		</p>
-		<!-- Slider
+		<!-- Slider -->
 		<div class="slider">
 			<div class="slick">
 				<div class="carousel-item">
 					<div class="carousel-img">
 						<img src="img/slider/1.jpg" alt="1">
 					</div>
-					<div class="carousel-text">
+					<div class="carousel-text-2">
 						<h1 class="bold">DORADA ŚWIEŻA</h1>
 						<p class="regular">14,99 ZŁ/KG</p>
 					</div>
@@ -100,7 +101,7 @@
 					<div class="carousel-img">
 						<img src="img/slider/1.jpg" alt="1">
 					</div>
-					<div class="carousel-text">
+					<div class="carousel-text-2">
 						<h1 class="bold">DORADA ŚWIEŻA</h1>
 						<p class="regular">14,99 ZŁ/KG</p>
 					</div>
@@ -134,7 +135,7 @@
 				</div>				
 			</div>
 		</div>
-		 Slider END -->
+		<!-- Slider END -->
 		<div class="container">
 			<a class="asortyment-btn w3-center bold">ZOBACZ CAŁY <span class="blocked">ASORTYMENT</span></a>
 		</div>	
