--- a/tajam/index.html
+++ b/tajam/index.html
@@ -263,7 +263,7 @@
 		</div>
 	</section>
 	<script
-  src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" defer></script>
+  src="js/jquery-3.2.1.min.js" defer></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
 	<script type="text/javascript" src="js/slick.min.js" defer></script>
 	<script src="js/script.js" defer></script>
