--- a/tajam/index.html
+++ b/tajam/index.html
@@ -5,13 +5,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tajam</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Playfair+Display:400,700,900|Roboto:100,300,400,900" rel="stylesheet">
-	<link rel="stylesheet" href="css/fontello.css">
-	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
-	<link rel="stylesheet" href="css/slick-theme.css">
-	<link rel="stylesheet" href="css/style.css">
+	<style>
+		.preloader	{
+			padding: 0;
+			margin: 0;
+			display: block;
+			position: fixed;
+			background-color: #311d5e;
+			z-index: 9999;
+			width: 100%;
+			height: 100vh;
+			display:table;
+			transition: 0.8s;
+		}
+		.preloader-image {
+			display: block;
+			margin: 0 auto;
+		}
+	</style>
 </head>
 <body>
+<div class="preloader">
+	<div class="wrapper" style="display: table-cell;vertical-align: middle">
+		<img class="preloader-image" src="img/preloader.svg" alt="preloader">
+	</div>
+</div>
 	<header class="header">
 		<div class="container-960">
 			<nav class="header-top">
@@ -263,6 +281,11 @@
 			</div>
 		</div>
 	</section>
+	<link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Playfair+Display:400,700,900|Roboto:100,300,400,900" rel="stylesheet">
+	<link rel="stylesheet" href="css/fontello.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
+	<link rel="stylesheet" href="css/slick-theme.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script
   src="js/jquery-3.2.1.min.js" defer></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
