--- a/tajam/index.html
+++ b/tajam/index.html
@@ -7,16 +7,17 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<style>
 		.preloader	{
-			padding: 0;
-			margin: 0;
-			display: block;
+			display: none;
 			position: fixed;
 			background-color: #311d5e;
 			z-index: 9999;
 			width: 100%;
 			height: 100vh;
-			display:table;
-			transition: 0.8s;
+			transition: ease 0.8s;
+		}
+		.preloader_active {
+			display:table; 
+			transition: ease 0.8s;
 		}
 		.preloader-image {
 			display: block;
@@ -25,8 +26,8 @@
 	</style>
 </head>
 <body>
-<div class="preloader">
-	<div class="wrapper" style="display: table-cell;vertical-align: middle">
+<div class="preloader preloader_active">
+	<div class="wrapper" style="display: table-cell; vertical-align: middle">
 		<img class="preloader-image" src="img/preloader.svg" alt="preloader">
 	</div>
 </div>
@@ -270,17 +271,88 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="con-client">
 		<div class="container-960">
 			<div class="row">
 				<div class="col-lg-6">
-					<h4>give us good news</h4>
+					<h4 class="contact-header">give us good news</h4>
+					<form style="padding: 0 0 2rem 0" class="contact-form" id="form" action="GET" required>
+						<input type="text" placeholder="Name" required="required">
+						<br>
+						<input name="email" type="email" placeholder="E-mail" required="required">
+						<br>
+						<input type="text" placeholder="Subject" required="required">
+						<br>
+						<textarea style="resize: none" name="message" placeholder="Message" rows="10" cols="50" required="required"></textarea>
+						<button class="contact-button" type="submit" form="form" value="submit">submit</button>
+					</form>
 				</div>
-				<div class="col-lg-6"></div>
+				<div class="col-lg-6">
+					<h4 class="client-header">our happy client</h4>
+					<div class="row" style="padding: 1.5rem 0 0.8rem 0">
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/zara.svg" alt="Zara Logo" class="client-img"></div>
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/mango.svg" alt="Mango Logo" style="padding-left: 15px" class="client-img"></div>
+					</div>
+					<div class="row" style="padding: 2rem 0 0.8rem 0">
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/barneys.svg" alt="Barneys Logo" class="client-img"></div>
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/we_are_gucci.svg" alt="Gucci Logo" class="client-img" style="padding-top: 8px; padding-left: 15px"></div>
+					</div>
+					<div class="row" style="padding: 2rem 0 0.8rem 0">
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/calvkl.svg" alt="Calvin Klein Logo" class="client-img"></div>
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/nike.svg" alt="Nike Logo" style="padding-left: 35px; margin-top: -5px;" class="client-img"></div>
+					</div>
+					<div class="row" style="padding: 2rem 0 0.8rem 0">
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/converse.svg" alt="Converse Logo"  class="client-img"></div>
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/puma.svg" alt="Puma Logo" style="padding-left: 20px" class="client-img"></div>
+					</div>
+					<div class="row" style="padding: 2rem 0 0.8rem 0">
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/levis.svg" alt="Levis Logo" style="padding-top: 8px" class="client-img"></div>
+						<div class="col-lg-6 col-sm-6 col-md-6 col-xs-6"><img src="img/billabong.svg" alt="Billabong Logo" style="padding-left: 20px" class="client-img"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
+	<footer class="footer">
+		<div class="footer-wrapper">
+			<div class="container-960">
+				<div class="row" style="padding-top: 1.5rem">
+					<div class="col-lg-4">
+						<img src="img/tajam.png" alt="Tajam logo">
+						<p class="footer-about">lorem quis bibendum auctor, nisi elit <br> consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+					</div>
+					<div class="col-lg-4">
+						<h5 class="footer-header" style="padding-bottom: 2rem">our studio</h5>
+						<i style="color: white; font-size: 1.2em" class="icon-location"></i><p class="footer-location">Ruko cucruk, Jl. Radio luar dalem jos <br> No.12 - 13, Kalideres - Jakarta Barat <br> 11480 - Indonesia</p>
+						<br>
+						<i style="color: white" class="icon-phone"></i><p class="footer-phone">(+62) 21-2224 3333</p>
+					</div>
+					<div class="col-lg-4">
+						<h5 class="footer-header">stay in touch</h5>
+						<form id="ff" class="footer-form" action="#">
+							<input type="email" placeholder="Subscribe to our newsletter" required>
+							<button class="footer-button" form="ff"><img src="img/paper.svg" alt="Send!"></button>
+						</form>
+						<div class="footer-links">
+							<i class="icon-facebook"></i><i class="icon-twitter"></i><i class="icon-dribbble"></i><i class="icon-instagram"></i><i class="icon-gplus"></i><i class="icon-youtube-play"></i>
+						</div>
+					</div>
+				</div>
+				<div class="row" style="margin-top: 3.5rem">
+					<div class="col-lg-6">
+						<ul class="footer-list">
+							<li><a href="#">help</a></li>
+							<li><a href="#">terms &amp; condition</a></li>
+							<li><a href="#">privacy</a></li>
+						</ul>
+					</div>
+					<div class="col-lg-6">
+						<p class="footer-copy">Copyright © 2015 - Tajem Creative</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Playfair+Display:400,700,900|Roboto:100,300,400,900" rel="stylesheet">
 	<link rel="stylesheet" href="css/fontello.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
