🔴 |  Next 3 blocks of website

--- a/bicycle/index.html
+++ b/bicycle/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title></title>
+	<title>Vintage Bikes</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
@@ -35,13 +35,51 @@
 	</section>
 	<section class="oliva">
 		<div class="row" style="margin: 0">
-			<div class="col-lg-8 oliva-bicycle" style="padding: 0">
-				<img src="img/Logo.svg" alt="logo">
+			<div class="col-lg-8 oliva-bg" style="padding: 0">
+				<img src="img/company-logo.svg" alt="logo">
 			</div>
 			<div class="col-lg-4" style="padding: 0">
-				<div class="oliva-about"></div>
-				<div class="oliva-img"></div>
+				<div class="oliva-info">
+					<img src="img/olivia-icon.png" alt="Bicycle icon" class="oliva-icon">
+					<h2 class="oliva-heading">Vintage Oliva</h2>
+					<p class="oliva-about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+					<div class="oliva-line"></div>
+				</div>
+				<div class="oliva-saddle"></div>
 			</div>
+		</div>
+	</section>
+	<section class="boriosa">
+		<div class="row" style="margin: 0">
+			<div class="col-lg-4" style="padding: 0">
+				<div class="boriosa-info">
+					<img src="img/boriosa-icon.png" alt="Bicycle icon" class="boriosa-icon">
+					<h2 class="boriosa-heading">la boriosa</h2>
+					<p class="boriosa-about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+					<div class="boriosa-line"></div>
+				</div>
+				<div class="boriosa-saddle"></div>
+			</div>
+			<div class="col-lg-8 boriosa-bg" style="padding: 0">
+				<img src="img/boriosa-logo.svg" alt="logo">
+			</div>
+		</div>
+	</section>
+	<section class="hulot">
+		<div class="row" style="margin: 0">
+			<div class="col-lg-4 hulot-logo-wrapper" style="padding: 0">
+				<img class="hulot-logo" src="img/hulot-logo.svg" alt="Hulot logo">
+			</div>
+			<div class="col-lg-4" style="padding: 0">
+				<div class="hulot-info">
+					<img src="img/hulot-icon.svg" alt="Hulot Icon" class="hulot-icon">
+					<h3 class="hulot-heading">retrò Bike - M. Hulot</h3>
+					<p class="hulot-about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+					<div class="hulot-line"></div>
+				</div>
+				<div class="hulot-info-img"></div>
+			</div>
+			<div class="col-lg-4 hulot-bicycle" style="padding: 0"></div>
 		</div>
 	</section>
     <!-- Optional JavaScript -->
